hide quilt overflow to prevent a clash on resize
Because the quilt resize is now debounced, when the page gets narrower
the quilt would stay the same size for a few cycles and collide with
whatever was next to it.

Remove the white background which also fixed this but broke the object
page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -500,8 +500,8 @@ a.departmentLink:hover  {
 
 .quilt-wrap .lazy-load {
   display: inline-block;
+  overflow: hidden;
 }
-
 
 /* ===== artwork.js STYLES ===== */
 
@@ -537,7 +537,6 @@ a.departmentLink:hover  {
   border-top: none;
   float: none;
   padding-top: 0;
-  background-color:#fff;
 }
 .artwork .objects-focus .artwork-image {
   display: none;
